tests/NormalTests/paczka1/small_fuzzy/20285797.err
Error in line 1: EOHkXPykVp S778 90,7
Error in line 5: EOHkXPykVp A949 91,7
Error in line 4: QLVNn5 A44 73,9
